--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,14 @@
         android:theme="@style/Theme.State"
         tools:targetApi="31">
         <activity
+
+            android:screenOrientation="portrait"
+
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.State">
+            android:theme="@style/Theme.State"
+            tools:ignore="DiscouragedApi">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
